--- a/index.html
+++ b/index.html
@@ -1,48 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="ColorGameApp">
 
 <head>
+    <meta charset="UTF-8">
     <title>Color Game</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 </head>
 
-<body>
-    <!-- Modal for displaying messages -->
-    <div id="myModal" class="modal">
+<body ng-controller="GameController as game">
+    <div id="myModal" class="modal" ng-show="game.showModal">
         <div class="modal-content">
-            <p>Correct! You chose the right color.</p>
-            <button id="playAgainButton">Play Again</button>
+            <p>{{ game.modalMessage }}</p>
+            <button id="playAgainButton" ng-click="game.resetGame()">Play Again</button>
+        </div>
+    </div>
+    <h1>Welcome to <span id="color-display">{{ game.pickedColor }}</span> Guessing Game</h1>
+    <div id="stripe">
+        <button id="reset" ng-click="game.resetGame()">New Colors</button>
+        <span id="message">{{ game.message }}</span>
+        <button class="mode" ng-click="game.setDifficulty('Easy')">Easy</button>
+        <button class="mode" ng-click="game.setDifficulty('Medium')">Medium</button>
+        <button class="mode" ng-click="game.setDifficulty('Hard')">Hard</button>
+        
+    </div>
+    <div id="timer">Timer: <span id="timer-display">{{ game.remainingTime }}</span> seconds</div>
+    <!-- HTML for the circles -->
+    <div id="container">
+        <div ng-repeat="circle in game.colors track by $index" class="circle" ng-click="game.checkGuess(circle, $index)"
+            ng-style="{'background-color': circle, 'display': game.guessStatus[$index] === 'hidden' ? 'none' : 'block'}">
         </div>
     </div>
 
-    <!-- Game title -->
-    <h1>Welcome to <span id="color-display">RGB</span> Guessing Game</h1>
 
-    <!-- Difficulty selection buttons -->
-    <div id="stripe">
-        <button id="reset">New Colors</button>
-        <span id="message"></span>
-        <!-- Difficulty buttons -->
-        <button class="mode">Easy</button>
-        <button class="mode selected">Medium</button>
-        <button class="mode">Hard</button>
-    </div>
-
-    <!-- Timer display -->
-    <div id="timer">Timer: <span id="timer-display">10</span> seconds</div>
-
-    <!-- Game container with colored circles -->
-    <div id="container">
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-    </div>
-
-    <!-- JavaScript file to handle game logic -->
-    <script type="text/javascript" src="ex.js"></script>
+    <script src="ex.js"></script>
 </body>
 
 </html>
